fix: hide overflowing hidden calendar

--- a/cms/static/sass/course-unit-mfe-iframe-bundle.scss
+++ b/cms/static/sass/course-unit-mfe-iframe-bundle.scss
@@ -10,6 +10,9 @@ html {
   body {
     min-width: 800px;
     background: transparent;
+    &.openassessment_full_height.view-container {
+        overflow-y: hidden;
+    }
   }
 }
 
